Fix unreadable font color for management course

--- a/modules/mosaic/_mosaic-tiles.scss
+++ b/modules/mosaic/_mosaic-tiles.scss
@@ -151,6 +151,12 @@
     &._management-2 {
         &._highlight {
             background-color: color(4, $colors-scheme);
+            color: color(1);
+
+            .button-square,
+            .button-square:hover:before {
+                color: color(1);
+            }
         }
 
         &._emphasize {
